--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
 </head>
   <body>
     <h1>My First Heading</h1>
-    <input ng-model='words'>
-    {{words}}
+    <input ng-model='username'>
+    <input type='password' ng-model='password'>
+    {{username}}
+    <button>
   </body>
 </html>
