--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,30 @@
 <html ng-app="signin">
 <head>	
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="signin.js"></script>
+  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
   <body>
     <h1>My First Heading</h1>
-    <input ng-model='username'>
-    <input type='password' ng-model='password'>
-    {{username}}
-    <button>
+    <form role='form'>
+      <div class='form-group'>
+      	<label> Username: </label>
+	    <input class='form-control' ng-model='username'>
+	  </div>
+	  <div class='form-group'>
+	  	<label>Password:</label>
+	    <input class='form-control' type='password' ng-model='password'>
+	    {{username}}
+	  </div>
+	  <div class='form-group'>
+	  	<label>Retype Password:</label>
+	    <input  class='form-control' type='password' ng-model='passwordCheck'>    
+	  </div>
+	    <button  type="submit" class="btn btn-success">Login!</button>
+	</form>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </body>
+
 </html>
