--- a/client/index.html
+++ b/client/index.html
@@ -2,37 +2,14 @@
 <html ng-app="signin">
 <head>	
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="signin.js"></script>
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
   <body>
     <h1>My First Heading</h1>
-    <div class='col-xs-6'>
-    <form name='form' class='form-horizontal well' role='form' novalidate>
-      <div class='form-group'>
-      	<label class='col-xs-4'> Username: </label>
-      	<div class='col-xs-12'>
-		  <input class='form-control' ng-model='username' required>
-      	</div>
-	  </div>
-	  <div class='form-group'>
-	  	<label class='col-sm-1'>Password:</label>
-	  	<div class='col-xs-12'>
-		  <input class='form-control' type='password' ng-model='password' required>
-	  	</div>
-	    <!-- {{username}} -->
-	  </div>
-	  <div class='form-group'>
-	  	<label class='col-sm-12'>Retype Password:</label>
-	  	<div class='col-xs-12'>
-		  <input  class='form-control' type='password' ng-model='passwordCheck' required>    
-	  	</div>
-	  </div>
-	  <div class='form-group'>
-	    <button type="submit" ng-disabled='form.$invalid' class="btn btn-success  col-xs-3 col-xs-offset-8">Login!</button>
-	  </div>
-	</form>
+    <div ui-view class='col-xs-6'>
     </div>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
