Added some form validations

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
 </head>
   <body>
     <h1>My First Heading</h1>
-    <div ui-view class='col-xs-6'>
-    </div>
+    <div ui-view='left-side' class='col-xs-6'></div> 
+    <div ui-view='right-side' class='col-xs-6'></div>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </body>
