Check if passwords match

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
   <body>
-    <h1>My First Heading</h1>
+    <h1>My First Login</h1>
     <div ui-view='left-side' class='col-xs-6'></div> 
     <div ui-view='right-side' class='col-xs-6'></div>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
